--- a/css/style.scss
+++ b/css/style.scss
@@ -27,6 +27,70 @@ body {
   padding: 0;
   background-color: $grey;
 }
+
+.loading-page {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #333;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 11;
+  transition: .3s;
+  // display:none;
+  .loader-wrapper {
+    width:400px;
+    height:200px;
+    display:flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items:center;
+   
+    .title {
+      font-family: "Courgette", Courier, monospace;
+     
+      color: white;
+      font-size:40px;
+      text-align:center;
+      span {
+        color: $blood;
+      }
+    }
+    .loader {
+      display: inline-block;
+      width: 30px;
+      height: 30px;
+      position: relative;
+      border: 4px solid #fff;
+      animation: loader 2s infinite ease;
+      .loader-inner {
+        vertical-align: top;
+        display: inline-block;
+        width: 100%;
+        background-color: #fff;
+        animation: loader-inner 2s infinite ease-in;
+      }
+    }
+  }
+}
+
+@keyframes loader {
+  0% { transform: rotate(0deg);}
+  25% { transform: rotate(180deg);}
+  50% { transform: rotate(180deg);}
+  75% { transform: rotate(360deg);}
+  100% { transform: rotate(360deg);}
+}
+@keyframes loader-inner {
+  0% { height: 0%;}
+  25% { height: 0%;}
+  50% { height: 100%;}
+  75% { height: 100%;}
+  100% { height: 0%;}
+}
 .container {
   width: 60%;
   margin: auto;
@@ -51,7 +115,7 @@ body {
 header {
   width: 100%;
   padding: 20px 0;
-  background: rgb(0, 0, 0);
+  background: rgb(19, 19, 19);
   position: fixed;
   z-index: 10;
   .container {
@@ -103,7 +167,6 @@ header {
             z-index: 1;
             @include transition(all 0.2s);
           }
-         
         }
       }
     }
@@ -295,7 +358,6 @@ header {
 }
 
 .search-section {
-  
   background: white;
 
   .search-wrap {
@@ -456,7 +518,7 @@ header {
 }
 
 .results-section {
-  height:100vh;
+  height: 100vh;
 }
 
 $breakpoints: (
