results area working

--- a/css/_variablesMixins.scss
+++ b/css/_variablesMixins.scss
@@ -7,6 +7,8 @@ $lightred: #d4a4a4;
 $brown: rgb(88, 30, 30);
 $min-width: 120px;
 $navMarkerWidth: 50px;
+$full: 100%;
+$title-font: "Courgette", Courier, monospace;
 
 $images: (
   one: url(../images/desserts/cheesecake-full.jpg),
