--- a/css/sections/_dessert.scss
+++ b/css/sections/_dessert.scss
@@ -1,35 +1,35 @@
 .dessert-section {
-    .top {
+  .top {
+    width: $full;
+    min-height: 40vh;
+    background: $blood;
+  }
+  .container {
+    position: relative;
+  }
+  .dessert-text {
+    width: 45%;
+    min-height: 40vh;
+    padding: 100px 0;
+    box-sizing: border-box;
+    color: $lightred;
+    font-size: 18px;
+  }
+
+  .button {
+    color: $lightred;
+    margin: 40px 0;
+    border: solid 2px $lightred;
+  }
+  .dessert-img {
+    width: 450px;
+    height: 400px;
+    position: absolute;
+    margin: auto;
+    right: 0;
+    bottom: -120px;
+    img {
       width: 100%;
-      min-height: 40vh;
-      background: $blood;
-    }
-    .container {
-      position: relative;
-    }
-    .dessert-text {
-      width: 45%;
-      min-height: 40vh;
-      padding: 100px 0;
-      box-sizing: border-box;
-      color: $lightred;
-      font-size: 18px;
-    }
-  
-    .button {
-      color: $lightred;
-      margin: 40px 0;
-      border: solid 2px $lightred;
-    }
-    .dessert-img {
-      width: 450px;
-      height: 400px;
-      position: absolute;
-      margin: auto;
-      right: 0;
-      bottom: -120px;
-      img {
-        width: 100%;
-      }
     }
   }
+}
