--- a/css/style.scss
+++ b/css/style.scss
@@ -13,8 +13,8 @@ body {
 }
 
 .loading-page {
-  width: 100%;
-  height: 100%;
+  width: $full;
+  height: $full;
   position: absolute;
   top: 0;
   left: 0;
@@ -23,7 +23,7 @@ body {
   justify-content: center;
   align-items: center;
   z-index: 11;
-  transition: 0.3s;
+  transition: 0.5s ease;
  
   .loader-wrapper {
     width: 400px;
@@ -36,7 +36,7 @@ body {
    
   }
   .title {
-    font-family: "Courgette", Courier, monospace;
+    font-family: $title-font;
     color: white;
     font-size: 40px;
     text-align: center;
@@ -55,7 +55,7 @@ body {
   .loader-inner {
     vertical-align: top;
     display: inline-block;
-    width: 100%;
+    width: $full;
     background-color: #fff;
     animation: loader-inner 2s infinite ease-in;
   }
@@ -86,10 +86,10 @@ body {
     height: 0%;
   }
   50% {
-    height: 100%;
+    height: $full;
   }
   75% {
-    height: 100%;
+    height: $full;
   }
   100% {
     height: 0%;
@@ -117,7 +117,7 @@ body {
 }
 
 header {
-  width: 100%;
+  width: $full;
   padding: 20px 0;
   background: rgb(19, 19, 19);
   position: fixed;
