--- a/css/sections/_results.scss
+++ b/css/sections/_results.scss
@@ -9,8 +9,6 @@
   .recipe-card {
       width:25%;
       height:50vh;
-      background-size:cover;
-      background-position: center center;
       position:relative;
      
   }
@@ -32,6 +30,17 @@
     height:$full;
     color:white;
     padding-left: 40px;
+    
+    h2 {
+      color:rgb(212, 212, 212);
+      text-transform: uppercase;
+      font-size: 13px;
+    }
+    h4 {
+      font-size: 12px;
+      color: $darkgrey;
+      letter-spacing:  1px;
+    }
 
   }
   .btn-wrap {
@@ -42,14 +51,16 @@
     align-items: center;
   }
   .info-btn {
-      width:60px;
-      height:60px;
+      width:50px;
+      height:50px;
       border-radius:50%;
       display:flex;
       justify-content: center;
       align-items: center;
       background:$blood;
       color:white;
+      font-family:$title-font;
+      cursor: pointer;
       
   }
 }
