--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,15 @@
   color: #902f3a;
 }
 
+@media (max-width: 600px) {
+  .welcome-section .hero p {
+    font-size: 12px;
+  }
+  .welcome-section .hero h1 {
+    font-size: 26px;
+  }
+}
+
 .dessert-section .top {
   width: 100%;
   min-height: 40vh;
@@ -108,6 +117,11 @@
   border: solid 2px #d4a4a4;
 }
 
+.dessert-section .button:hover {
+  background: #d4a4a4;
+  color: #902f3a;
+}
+
 .dessert-section .dessert-img {
   width: 450px;
   height: 400px;
@@ -119,6 +133,31 @@
 
 .dessert-section .dessert-img img {
   width: 100%;
+}
+
+@media (max-width: 1024px) {
+  .dessert-section .container {
+    position: relative;
+    width: 80%;
+  }
+  .dessert-section .dessert-text {
+    width: 55%;
+    padding: 50px 0;
+  }
+  .dessert-section .dessert-img {
+    right: 0;
+  }
+}
+
+@media (max-width: 600px) {
+  .dessert-section .dessert-text {
+    width: 100%;
+    padding: 50px 20px;
+    text-align: center;
+  }
+  .dessert-section .dessert-img {
+    display: none;
+  }
 }
 
 .recipe-section {
@@ -453,6 +492,27 @@
           filter: grayscale(100%);
 }
 
+@media (max-width: 1024px) {
+  .recipe-section .card-wrap {
+    margin-bottom: 70px;
+    width: 100%;
+  }
+  .recipe-section .card {
+    margin-bottom: 50px;
+    width: 220px;
+  }
+  .recipe-section .card-img {
+    width: 220px;
+    height: 220px;
+  }
+}
+
+@media (max-width: 600px) {
+  .recipe-section #search {
+    padding-bottom: 115px;
+  }
+}
+
 .search-section {
   background: white;
 }
@@ -549,6 +609,8 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .options-bar * {
@@ -591,6 +653,7 @@
   width: 100%;
   left: 0;
   top: 48px;
+  z-index: 50;
 }
 
 .options-bar .drop div {
@@ -650,6 +713,37 @@
   transform: translate(360px, 0);
 }
 
+@media (max-width: 1024px) {
+  .search-section .searchbar {
+    width: 80%;
+  }
+  .search-section .text p {
+    font-size: 12px;
+  }
+  .search-section .text h1 {
+    font-size: 40px;
+  }
+}
+
+@media (max-width: 600px) {
+  .search-section .searchbar {
+    width: 90%;
+  }
+  .search-section .text p {
+    font-size: 10px;
+  }
+  .search-section .text h1 {
+    font-size: 25px;
+  }
+  .options-bar #main li {
+    width: 100%;
+    padding: 25px 20px;
+  }
+  .options-bar #marker {
+    display: none;
+  }
+}
+
 .results-section {
   min-height: 100vh;
 }
@@ -667,6 +761,18 @@
   width: 25%;
   height: 50vh;
   position: relative;
+  -webkit-transition: .3s;
+  transition: .3s;
+}
+
+.results-section .source {
+  padding: 1px 30px;
+  height: 50px;
+  background: rgba(0, 0, 0, 0.664);
+  color: white;
+  font-family: "Courgette", Courier, monospace;
+  font-weight: 100;
+  letter-spacing: 1px;
 }
 
 .results-section .cover {
@@ -737,6 +843,24 @@
   color: white;
   font-family: "Courgette", Courier, monospace;
   cursor: pointer;
+  -webkit-transition: .3s;
+  transition: .3s;
+}
+
+.results-section .info-btn:hover {
+  background: #974848;
+}
+
+@media (max-width: 1024px) {
+  .results-section .recipe-card {
+    width: 50%;
+  }
+}
+
+@media (max-width: 600px) {
+  .results-section .recipe-card {
+    width: 100%;
+  }
 }
 
 body {
@@ -985,6 +1109,11 @@ header nav a:hover {
   color: #e2e2e2;
 }
 
+footer {
+  min-height: 300px;
+  background: #333;
+}
+
 @media (max-width: 1800px) {
   .recipe-section .card {
     width: 220px;
@@ -1005,32 +1134,6 @@ header nav a:hover {
   }
 }
 
-@media (max-width: 1024px) {
-  .dessert-section .container {
-    position: relative;
-    width: 80%;
-  }
-  .dessert-section .dessert-text {
-    width: 55%;
-    padding: 50px 0;
-  }
-  .dessert-section .dessert-img {
-    right: 0;
-  }
-  .recipe-section .card-wrap {
-    margin-bottom: 70px;
-    width: 100%;
-  }
-  .recipe-section .card {
-    margin-bottom: 50px;
-    width: 220px;
-  }
-  .recipe-section .card-img {
-    width: 220px;
-    height: 220px;
-  }
-}
-
 @media (max-width: 600px) {
   .container {
     width: 100%;
@@ -1040,8 +1143,8 @@ header nav a:hover {
     padding: 20px 0 0 0;
   }
   header .container {
-    width: 100%;
     text-align: center;
+    width: 100%;
   }
   header .title {
     margin: auto;
@@ -1064,23 +1167,6 @@ header nav a:hover {
     padding: 10px 20px;
     border-left: solid 1px #eee;
     border-right: solid 1px #eee;
-  }
-  .welcome-section .hero p {
-    font-size: 12px;
-  }
-  .welcome-section .hero h1 {
-    font-size: 26px;
-  }
-  .dessert-section .dessert-text {
-    width: 100%;
-    padding: 50px 20px;
-    text-align: center;
-  }
-  .dessert-section .dessert-img {
-    display: none;
-  }
-  .recipe-section #search {
-    padding-bottom: 115px;
   }
 }
 /*# sourceMappingURL=style.css.map */
