--- a/css/sections/_recipe-details.scss
+++ b/css/sections/_recipe-details.scss
@@ -1,20 +1,34 @@
 .recipe-details-section {
+    background: white;
     .breaker {
         background:$blood;
         height:100px;
+        position: relative;
+    }
+    .line {
+        background: #222;
+        width:100%;
+        height:10px;
+        position: absolute;
+        bottom:0;
     }
     min-height: 150vh;
     .container {
         margin:70px auto;
-        background:white;
+        border:solid 2px rgb(185, 185, 185);
+        border-radius:5px;
         min-height:150vh;
     }
     .img-wrap {
         width:50%;
-        
+        margin: 50px auto;
+        height:500px;
+
 
         img {
             width: 100%;
+            height:500px;
+            object-fit: cover;
         }
     }
 }
